fix: fix alt tag

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 					<div class="img-container">
-						<img src="static/images/bike-1.webp" id="bicycle-img" data-size="small" loading="lazy" aralt="">
+						<img src="static/images/bike-1.webp" id="bicycle-img" data-size="small" loading="lazy" alt="">
 						<div class="dot" id="elem1-dot"></div>
 						<div class="dot" id="elem2-dot"></div>
 						<div class="dot" id="elem3-dot"></div>
