feat: Add workshop_adresses page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		    <div class="circle circle-medium" style="left: 24em; top: 1em"></div>
 		    <div class="circle circle-medium" style="left: 18em; top: 25em"></div>
 			<div class="top-part container">
-				<img src="static/images/logo-white 1.png" fetchpriority="high" alt="Логотип компании">
+				<a href="index.html"><img src="static/images/logo-white 1.png" fetchpriority="high" alt="Логотип компании"></a>
 				<ul class="top-part-navigation">
 					<li><a href="authorization.html" class="authorization-button">Войти</a></li>
 					<li><a href="registration.html" class="registration-button">Зарегистрироваться</a></li>
@@ -60,7 +60,7 @@
 							<li><a href="accessories.html" class="top-nav-link">Аксессуары</a></li>
 							<li><a href="spare_parts.html" class="top-nav-link">Запчасти</a></li>
 							<li><a href="tools.html" class="top-nav-link">Инструменты</a></li>
-							<li><a href="abount_company.html" class="top-nav-link">О компании</a></li>
+							<li><a href="about_company.html" class="top-nav-link">О компании</a></li>
 							<li><a href="workshop_addresses.html" class="top-nav-link">Адреса мастерских</a></li>
 						</ul>
 					</div>
