Add about company page

--- a/about_company.html
+++ b/about_company.html
@@ -24,9 +24,10 @@
 		<link rel="stylesheet" href="static/styles/style.css">
 		<link rel="stylesheet" href="static/styles/header.css">
 		<link rel="stylesheet" href="static/styles/footer.css">
-        <link rel="stylesheet" href="static/styles/addresses/address-header.css">
-		<link rel="stylesheet" href="static/styles/addresses/addresse-footer.css">
-        <link rel="stylesheet" href="static/styles/addresses/addresses.css">
+        <link rel="stylesheet" href="static/styles/header-min.css">
+		<link rel="stylesheet" href="static/styles/footer-min.css">
+
+		<link rel="stylesheet" href="static/styles/about_company/about-company.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,9 +76,77 @@
 		<main class="container">
             <h1>О компании</h1>
             <div class="about-company">
-                <p><img src="static/images/map-pin.svg" alt="" width="16">г. Пенза, ул. Московская, д. 32</p>
-                <p><img src="static/images/map-pin.svg" alt="" width="16">г. Пенза, ул. Суворова, д. 27</p>
-                <p><img src="static/images/map-pin.svg" alt="" width="16">г. Пенза, ул. Кирова, д. 132</p>
+				<div class="text-with-image" data-direction="right">
+					<span>
+						Penza Bicycle – это не просто компания по производству велосипедов. Это воплощение многолетней
+						страсти к велоспорту, стремление к инновациям и глубокая приверженность к 
+						созданию качественных и доступных велосипедов для каждого. Наша история началась в тихой 
+						мастерской в Пензе, где группа энтузиастов, объединенных любовью к велосипедам, решила создать 
+						нечто особенное.
+					</span>
+					<img src="static/images/bike 1.png" class="anim-img" alt="">
+				</div>
+				<p>
+					С первых дней своего существования Penza Bicycle руководствовалась принципом: велосипед – 
+					это больше, чем просто транспортное средство. Это стиль жизни, возможность познавать мир, 
+					сохранять здоровье и заботиться об окружающей среде. Именно поэтому каждый велосипед, который 
+					выходит из нашего цеха, создается с любовью и вниманием к деталям.
+				</p>
+				<p>
+					Мы гордимся тем, что Penza Bicycle – это компания, которая не стоит на месте. Мы постоянно 
+					инвестируем в разработку новых моделей, внедряем передовые технологии и используем только 
+					высококачественные материалы. Наша команда инженеров и дизайнеров неустанно работает над тем, 
+					чтобы наши велосипеды были не только надежными и удобными, но и отвечали самым современным 
+					требованиям в области эргономики и безопасности.
+				</p>
+				<p>
+					В нашем ассортименте вы найдете велосипеды для любого возраста и уровня подготовки. От надежных 
+					детских велосипедов, которые помогут вашим детям осваивать первые шаги на двух колесах, до 
+					горных велосипедов, способных покорить самые сложные трассы. Мы предлагаем широкий выбор 
+					городских велосипедов, идеально подходящих для комфортных поездок по городу, а также шоссейные 
+					велосипеды для тех, кто стремится к скорости и адреналину.
+				</p>
+				<div class="text-with-image" data-direction="left">
+					<span>
+						Но Penza Bicycle – это не только производитель велосипедов. Мы также являемся активными 
+						участниками велосипедного движения в России. Мы поддерживаем местные велоклубы и 
+						соревнования, организуем велопробеги и акции, направленные на популяризацию велосипедного 
+						спорта и здорового образа жизни.
+					</span>
+					<img src="static/images/Bicycle-PNG-Image-Transparent-Background-1.webp" class="anim-img" alt="">
+				</div>
+				<p>
+					Мы твердо верим в то, что велосипед может сделать мир лучше. Поэтому мы уделяем особое внимание 
+					экологической безопасности нашего производства. Мы используем экологически чистые материалы и 
+					технологии, минимизируем отходы и стремимся к снижению негативного воздействия на окружающую 
+					среду.
+				</p>
+				<p>
+					Penza Bicycle – это компания, которая заботится о своих клиентах. Мы предлагаем широкий спектр 
+					услуг, включающих гарантийное и послегарантийное обслуживание, ремонт и модернизацию велосипедов. 
+					Наши опытные консультанты всегда готовы помочь вам выбрать велосипед, который идеально подойдет 
+					именно вам, и ответить на любые ваши вопросы.
+				</p>
+				<p>
+					Мы стремимся к тому, чтобы каждый наш клиент был доволен своей покупкой и получал максимум 
+					удовольствия от использования нашего велосипеда. Наша цель – не просто продать велосипед, а 
+					создать долгосрочные отношения с нашими клиентами, основанные на доверии и взаимном уважении.
+				</p>
+				<p>
+					Penza Bicycle – это компания, которая смотрит в будущее. Мы планируем расширять ассортимент 
+					продукции, осваивать новые рынки и внедрять инновационные технологии. Мы стремимся к тому, 
+					чтобы Penza Bicycle стала символом качества, надежности и доступности в мире велосипедов.
+				</p>
+				<div class="text-with-image" data-direction="right">
+					<span>
+						Мы приглашаем вас присоединиться к нашему сообществу любителей велосипедов и вместе с 
+						нами открывать новые горизонты, покорять новые вершины и наслаждаться свободой, 
+						которую дарит велосипед. Penza Bicycle – это ваш верный спутник на пути к здоровью, 
+						приключениям и незабываемым впечатлениям.
+					</span>
+					<img src="static/images/c3c6a8e456837e34212d63ec5c951f5b-min (1).png" class="anim-img" alt="">
+				</div>
+
             </div>
 		</main>
 		<footer>
@@ -85,5 +154,6 @@
 				©2025, Penza Bicycle, все права защищены
 			</div>
 		</footer>
+		<script src="static/scripts/about-company/images-anim.js"></script>
 	</body>
 </html>
