--- a/authorization.html
+++ b/authorization.html
@@ -22,6 +22,7 @@
 		<meta name="twitter:image:src" content="static/images/header_image.webp" />
 
 		<link rel="stylesheet" href="static/styles/style.css">
+        <link rel="stylesheet" href="static/styles/form.css">
         <link rel="stylesheet" href="static/styles/authorization/athorization.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,9 +61,9 @@
             <div class="buttons">
                 <div class="left">
                     <span>Нет аккаунта?</span>
-                    <a href="registration.html" id="reg-button">Зарегистрироваться</a>
+                    <a href="registration.html" class="primary-button">Зарегистрироваться</a>
                 </div>
-                <input type="submit" value="Войти" id="auth-button">
+                <input type="submit" value="Войти" class="secondary-button">
             </div>
         </form>
 	</body>
