--- a/tools.html
+++ b/tools.html
@@ -27,8 +27,6 @@
 		<link rel="stylesheet" href="static/styles/header-min.css">
 		<link rel="stylesheet" href="static/styles/footer-min.css">
 
-		<link rel="stylesheet" href="static/styles/product_description/product_description.css">
-
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
@@ -38,11 +36,6 @@
 	</head>
 	<body>
 		<header>
-            <div class="circle circle-big" style="left: 10em; top: 5em"></div>
-		    <div class="circle circle-big" style="left: 22em; top: 16em"></div>
-            <div class="circle circle-medium" style="left: 7em; top: 14em"></div>
-		    <div class="circle circle-medium" style="left: 24em; top: 1em"></div>
-		    <div class="circle circle-medium" style="left: 18em; top: 25em"></div>
 			<div class="top-part container">
 				<a href="index.html"><img src="static/images/logo-white 1.png" fetchpriority="high" alt="Логотип компании"></a>
 				<ul class="top-part-navigation">
@@ -72,27 +65,8 @@
 				</ul>
 			</nav>
 		</header>
-		<main class="container">
-			<h1>Сумка под раму JDFAG145</h1>
-			<section class="description">
-				<img src="static/images/6374085300.jpg" alt="">
-				<div class="text-description">
-					<p id="country"><span class="tag">Страна:</span> Россия</p>
-					<p id="producer"><span class="tag">Производитель:</span> ООО "ВелоМир"</p>
-					<span class="tag">Описание:</span>
-					<p id="desc">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-						Nihil doloribus ut dicta natus. Animi magnam laboriosam consequuntur omnis. 
-						Praesentium aliquam fugit hic, eius fuga doloremque quas? Perferendis ullam quas 
-						ratione, sit similique repellat eos quam ab sed nam non. Veniam accusantium placeat 
-						magnam similique aliquam possimus et doloribus omnis iure ipsum tempore saepe nesciunt 
-						dolorum officiis rerum nobis inventore alias, officia quod quisquam sit nostrum ex. 
-						Quae rerum atque sed, velit ullam quia maxime dicta harum debitis voluptatum nulla, 
-						vitae modi nostrum illo, expedita sit quos. Soluta obcaecati excepturi veritatis quasi 
-						corrupti. Tempore, cupiditate. Ullam similique repudiandae non numquam magnam.
-					</p>
-				</div>
-			</section>
+		<main>
+
 		</main>
 		<footer>
 			<div class="container">
