feat: Add product page

--- a/tools.html
+++ b/tools.html
@@ -27,6 +27,8 @@
 		<link rel="stylesheet" href="static/styles/header-min.css">
 		<link rel="stylesheet" href="static/styles/footer-min.css">
 
+		<link rel="stylesheet" href="static/styles/products_page/products_page.css">
+
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
@@ -66,7 +68,146 @@
 			</nav>
 		</header>
 		<main>
+			<div class="container">
+				<h1>Инструменты</h1>
+				<div class="cards-container">
+					<section class="category-panel">
+						<a href="" class="category">Категория 1</a>
+						<a href="" class="category">Категория 2</a>
+						<a href="" class="category">Категория 3</a>
+						<a href="" class="category">Категория 4</a>
+						<a href="" class="category">Категория 5</a>
+					</section>
+					<section class="main-part">
+						<div class="sort-buttons">
+							<div class="buttons-group">
+								<input type="text" list="brands" id="select-brand" placeholder="Бренд">
+								<datalist id="brands">
+									<option value="Бранд 1"></option>
+									<option value="Бранд 2"></option>
+									<option value="Бранд 3"></option>
+									<option value="Бранд 4"></option>
+									<option value="Бранд 5"></option>
+								</datalist>
+								<div id="button-price">
+									<span>От:</span>
+									<input type="number" placeholder="100">
+									<span>до:</span>
+									<input type="number" placeholder="1000000">
+								</div>
+								<div id="show-button">
+									Показать
+								</div>
+								<div id="reset-filters">
+									Очистить фильтры
+								</div>
+							</div>
+							<div class="buttons-group">
+								<div class="left">
+									<input type="checkbox" name="in-stock" id="in-stock">
+									<label for="in-stock">В наличии</label>
+								</div>
+								<div class="sort-by">
+									<span>Сортировать по:</span>
+									<button>цене</button>
+									<button>популярности</button>
+								</div>
+							</div>
+						</div>
+						<div class="cards">
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
 
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+							<a href="product_description.html" class="card">
+								<img src="static/images/catalog (1) 1.png" alt="">
+								<span class="product-category">Инструменты</span>
+								<h3>Набор шестигранников FJ28D</h3>
+								<div class="card-bottom">
+									<span class="price">1636 ₽</span>
+									<button>
+										<img src="static/images/1 1.png" alt="">
+									</button>
+								</div>
+							</a>
+						</div>
+					</section>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div class="container">
