feat: save products in the bin

--- a/tools.html
+++ b/tools.html
@@ -133,7 +133,7 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h3>Набор шестигранников FJ28D2</h3>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
 									<button>
@@ -218,5 +218,6 @@
 				©2025, Penza Bicycle, все права защищены
 			</div>
 		</footer>
+		<script src="static/scripts/products/products.js"></script>
 	</body>
 </html>
