feat: Add order form

--- a/bin.html
+++ b/bin.html
@@ -85,6 +85,21 @@
                     <tbody class="bin-table-body">
                     </tbody>
                 </table>
+                <div class="order">
+                    <form action="#" method="get" class="order-form">
+                        <h2 class="form-title">Оформить заказ</h2>
+                        <span class="result-sum">Итоговая сумма</span>
+                        <span class="sum">53292 ₽</span>
+                        <label for="magazine" class="magazine-label">Выберите магазин:</label>
+                        <input type="text" name="magazine" id="magazine" list="magazines">
+                        <datalist id="magazines">
+                            <option value="г. Пенза, ул. Московская, д. 32"></option>
+                            <option value="г. Пенза, ул. Суворова, д. 27"></option>
+                            <option value="г. Пенза, ул. Кирова, д. 132"></option>
+                        </datalist>
+                        <input type="submit" value="Оформить заказ">
+                    </form>
+                </div>
             </section>
 		</main>
 		<footer>
