--- a/product_description.html
+++ b/product_description.html
@@ -81,15 +81,13 @@
 					<p id="producer"><span class="tag">Производитель:</span> ООО "ВелоМир"</p>
 					<span class="tag">Описание:</span>
 					<p id="desc">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-						Nihil doloribus ut dicta natus. Animi magnam laboriosam consequuntur omnis. 
-						Praesentium aliquam fugit hic, eius fuga doloremque quas? Perferendis ullam quas 
-						ratione, sit similique repellat eos quam ab sed nam non. Veniam accusantium placeat 
-						magnam similique aliquam possimus et doloribus omnis iure ipsum tempore saepe nesciunt 
-						dolorum officiis rerum nobis inventore alias, officia quod quisquam sit nostrum ex. 
-						Quae rerum atque sed, velit ullam quia maxime dicta harum debitis voluptatum nulla, 
-						vitae modi nostrum illo, expedita sit quos. Soluta obcaecati excepturi veritatis quasi 
-						corrupti. Tempore, cupiditate. Ullam similique repudiandae non numquam magnam.
+						Сумка под раму JDFAG145 — ваш верный спутник в велопутешествиях. Компактная 
+						и вместительная, она надежно хранит ключи, телефон, ремкомплект и другие 
+						мелочи. Прочные ремни обеспечивают надежное крепление, а водоотталкивающая ткань 
+						защищает содержимое от непогоды. Светоотражающие элементы повышают безопасность. 
+						Прочная конструкция гарантирует долгий срок службы. Простая установка и универсальный 
+						дизайн делают JDFAG145 идеальным выбором для любого велосипедиста. Наслаждайтесь 
+						комфортом в каждой поездке!
 					</p>
 				</div>
 			</section>
