--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="drop">
 						<li class="burger-button"><a href="#">&#9776;</a></li>
 						<ul class="nav-left-buttons">
-							<li><a href="repair.html" class="top-nav-link">Ремонт велосипелов</a></li>
+							<li><a href="repair.html" class="top-nav-link">Ремонт велосипедов</a></li>
 							<li><a href="accessories.html" class="top-nav-link">Аксессуары</a></li>
 							<li><a href="spare_parts.html" class="top-nav-link">Запчасти</a></li>
 							<li><a href="tools.html" class="top-nav-link">Инструменты</a></li>
