--- a/tools.html
+++ b/tools.html
@@ -122,10 +122,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -133,10 +133,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D2</h3>
+								<h2>Набор шестигранников FJ28D2</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -144,10 +144,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -155,10 +155,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -166,10 +166,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -177,10 +177,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -189,10 +189,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
@@ -200,10 +200,10 @@
 							<a href="product_description.html" class="card">
 								<img src="static/images/catalog (1) 1.png" alt="">
 								<span class="product-category">Инструменты</span>
-								<h3>Набор шестигранников FJ28D</h3>
+								<h2>Набор шестигранников FJ28D</h2>
 								<div class="card-bottom">
 									<span class="price">1636 ₽</span>
-									<button>
+									<button  aria-label="добавить товар в корзину">
 										<img src="static/images/1 1.png" alt="">
 									</button>
 								</div>
