fix: fix authorization link

--- a/authorization.html
+++ b/authorization.html
@@ -44,7 +44,7 @@
         <div class="circle circle-medium" style="left: 70em; top: 23em"></div>
 		<div class="circle circle-medium" style="left: 24em; top: 1em"></div>
 		<div class="circle circle-medium" style="left: 18em; top: 25em"></div>
-        <form action="" method="post">
+        <form action="" method="get">
             <h1>Авторизация</h1>
             <div class="form-main-part">
                 <label for="login">Почта/номер телефона</label>
