--- a/registration.html
+++ b/registration.html
@@ -44,7 +44,7 @@
         <div class="circle circle-medium" style="left: 70em; top: 23em"></div>
 		<div class="circle circle-medium" style="left: 24em; top: 1em"></div>
 		<div class="circle circle-medium" style="left: 18em; top: 25em"></div>
-        <form action="" method="post">
+        <form action="" method="get">
             <h1>Регистрация</h1>
             <div class="form-main-part">
                 <label for="surname">Фамилия<span class="red-star">*</span></label>
@@ -83,7 +83,7 @@
             <div class="buttons">
                 <div class="left">
                     <span>Есть аккаунт?</span>
-                    <a href="registration.html" class="primary-button">Войти</a>
+                    <a href="authorization.html" class="primary-button">Войти</a>
                 </div>
                 <input type="submit" value="Зарегистрироваться" class="secondary-button">
             </div>
